# mandelbrot-qml

./: CMakeLists.txt  Main.qml  README.md  kernel.cl  main.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrot_provider.cpp  mandelbrot_provider.h
